--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: iilness2
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: The Ops Guy
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -20,8 +20,7 @@ footer-links:
   dribbble:
   email:
   facebook:
-  flickr:
-  github: barryclark/jekyll-now
+  github: https://github.com/iilness2
   instagram:
   linkedin:
   pinterest:
@@ -47,7 +46,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "/"
 
 #
 # !! You don't need to change any of the configuration flags below !!
